fix hero desktop spacing

--- a/assets/sass/_theme/design-system/hero.sass
+++ b/assets/sass/_theme/design-system/hero.sass
@@ -10,7 +10,9 @@
     padding-top: var(--header-height)
     position: relative
     @include media-breakpoint-up(desktop)
+        margin-bottom: $spacing-5
         min-height: $hero-height-desktop
+        padding-bottom: $spacing-5
     *:focus-visible
         outline-color: $hero-color
     .content
